# py-dns

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml
docs/: app.js  index.html  styles.css
src/py_dns/: __init__.py  cache.py  doh.py  dot.py  handlers.py  inspector.py  llmhook.py  main.py  packet.py  rate_limiter.py  resolver.py  vulns.py
tests/: test_cache.py  test_inspector.py  test_llmhook.py  test_packet.py  test_resolver.py
