[project]
name = "py-dns"
version = "0.1.0"
description = "Educational DNS security tool — deliberately vulnerable forwarder vs. hardened secure resolver"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "httpx[http2]>=0.27",
    "openai>=2.36.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
py-dns = "py_dns.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_dns"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
